<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    xmlns:tools="http://schemas.android.com/tools"  
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"  
    android:layout_width="match_parent"  
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spinner21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/str_spinner2" />

    <Spinner
        android:id="@+id/spinner22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/str_pic2" />
      
    <ImageView  
        android:id="@+id/image_view2"  
        android:layout_width="wrap_content"  
        android:layout_height="wrap_content"  
        android:contentDescription="@string/str_image_view2" />  
  
</LinearLayout> 
